infra/gateway/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: project-a-route
  namespace: project-a
spec:
  parentRefs:
    - name: project-a-gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api
        headers:
          - name: x-canary
            value: "true"
      backendRefs:
        - name: project-a-backend-canary
          port: 8080
    
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: project-a-backend
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: project-a-frontend
          port: 80
